--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -5,6 +5,7 @@
              <th>ID</th>
              <th>Email</th>
              <th>Password</th>
+             <th></th>
          </tr>
      </thead>
      <tbody>
@@ -13,6 +14,7 @@
              <td scope="row"><%=user.id %></td>
              <td><%=user.email %></td>
              <td><%=user.password %></td>
+             <td><a name="" id="" class="btn btn-dark" href="/users/<%=user.id %>" role="button">Edit</a></td>
          </tr>
          <% }); %>
      </tbody>
