--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,6 +37,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/products">products</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users">users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">about</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
