--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
             <hr class="my-2">
             <p>5930213036</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="about" role="button">มาดิมาดิ</a>
+                <a class="btn btn-primary btn-lg" href="about" role="button">กดดิ</a>
             </p>
         </div>
 
