--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -15,7 +15,7 @@
              <td><%=product.title %></td>
              <td><%=product.price %></td>
              <td><a name="" id="" class="btn btn-dark" href="/products/<%=product.id %>" role="button">Edit</a></td>
-             <td><a name="" id="" class="btn btn-red" href="/products/<%=product.id %>" role="button">Delete</a></td>
+             <td><a name="" id="" class="btn btn-danger" href="/products/<%=product.id %>" role="button">Delete</a></td>
             
          </tr>
          <% }); %>
