--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -5,8 +5,8 @@
              <th>ID</th>
              <th>Title</th>
              <th>Price</th>
-             <th></th>
-         </tr>
+             <th><a name="" id="" class="btn btn-success" href="insert" role="button">Add New</a></th>
+</tr>
      </thead>
      <tbody>
      <% products.forEach(function(product){ %>
@@ -14,8 +14,8 @@
              <td scope="row"><%=product.id %></td>
              <td><%=product.title %></td>
              <td><%=product.price %></td>
-             <td><a name="" id="" class="btn btn-dark" href="/products/<%=product.id %>" role="button">Edit</a></td>
-             <td><a name="" id="" class="btn btn-danger" href="/products/<%=product.id %>" role="button">Delete</a></td>
+             <td><a name="" id="" class="btn btn-dark" href="/products/<%=product.id %>" role="button">Edit</a>
+             <a name="" id="" class="btn btn-danger" href="/products/<%=product.id %>" role="button">Delete</a></td>
             
          </tr>
          <% }); %>
