--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -15,7 +15,7 @@
              <td><%=product.title %></td>
              <td><%=product.price %></td>
              <td><a name="" id="" class="btn btn-dark" href="/products/<%=product.id %>" role="button">Edit</a>
-             <a name="" id="" class="btn btn-danger" href="/product_delete/<%=product.id %>" role="button">Delete</a></td>
+             <a name="" id="" class="btn btn-danger" href="/product_delete/<%=product.id %>" onclick="return confirm('Are you sure you want to delete?')" role="button">Delete</a></td>
             
          </tr>
          <% }); %>
