--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -5,7 +5,7 @@
              <th>ID</th>
              <th>Email</th>
              <th>Password</th>
-             <th></th>
+            <th><a name="" id="" class="btn btn-success" href="insert" role="button">Add New</a></th>
          </tr>
      </thead>
      <tbody>
