--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,4 +1,6 @@
 <% include ../partials/header %>
+<input class="form-control" id="myInput" type="text" placeholder="Search..">
+  <br>
  <table class="table">
      <thead>
          <tr>
@@ -8,7 +10,7 @@
              <th><a name="" id="" class="btn btn-success" href="insert" role="button">Add New</a></th>
 </tr>
      </thead>
-     <tbody>
+     <tbody id="myTable">
      <% products.forEach(function(product){ %>
          <tr>
              <td scope="row"><%=product.id %></td>
@@ -16,11 +18,19 @@
              <td><%=product.price %></td>
              <td><a name="" id="" class="btn btn-dark" href="/products/<%=product.id %>" role="button">Edit</a>
              <a name="" id="" class="btn btn-danger" href="/product_delete/<%=product.id %>" onclick="return confirm('Are you sure you want to delete?')" role="button">Delete</a></td>
-            
-         </tr>
+            </tr>
          <% }); %>
      </tbody>
  </table>
-
+<script>
+$(document).ready(function(){
+  $("#myInput").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#myTable tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
 
 <% include ../partials/footer %>
