--- a/views/pages/insert.ejs
+++ b/views/pages/insert.ejs
@@ -21,7 +21,16 @@
       class="form-control" name="price" id="" aria-describedby="helpId" placeholder=""value="">
     <small id="helpId" class="form-text text-muted">Price</small>
     </div>
-    
-    <button type="submit" class="btn btn-success">Save</button>
+   
+    <div class="form-group">
+        <label for="">Time</label>
+        <input type="text"
+          class="form-control" value="<%= time %>"name="price" id="" aria-describedby="helpId" placeholder="" disabled>
+        <small id="helpId" class="form-text text-muted">Price</small>
+      </div>
+      
+  <button type="submit" class="btn btn-secondary">Save</button>
+</div>
+   
 </form>
   <% include ../partials/footer %>
