--- a/views/pages/insert.ejs
+++ b/views/pages/insert.ejs
@@ -9,14 +9,14 @@
 </div>
 
   <div class="form-group">
-    <label for="title"></label>
+    <label for="title">title</label>
     <input type="text"
       class="form-control" name="title" id="" aria-describedby="helpId" placeholder=""value="">
     <small id="helpId" class="form-text text-muted">Title</small>
   </div>
 
   <div class="form-group">
-    <label for="Price"></label>
+    <label for="Price">Price</label>
     <input type="number"
       class="form-control" name="price" id="" aria-describedby="helpId" placeholder=""value="">
     <small id="helpId" class="form-text text-muted">Price</small>
@@ -24,9 +24,8 @@
    
     <div class="form-group">
         <label for="">Time</label>
-        <input type="text"
-          class="form-control" value="<%= time %>"name="price" id="" aria-describedby="helpId" placeholder="" disabled>
-        <small id="helpId" class="form-text text-muted">Price</small>
+        <input type="text" class="form-control" value="<%= time %>" name="price" id="" aria-describedby="helpId" placeholder="" disabled>
+        <small id="helpId" class="form-text text-muted">Time</small>
       </div>
       
   <button type="submit" class="btn btn-secondary">Save</button>
