--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -7,7 +7,7 @@
              <th>ID</th>
              <th>Title</th>
              <th>Price</th>
-             <th><a name="" id="" class="btn btn-success" href="insert" role="button">Add New</a></th>
+             <th><a name="" id="" class="btn btn-success" href="/insert" role="button">Add New</a></th>
 </tr>
      </thead>
      <tbody id="myTable">
