--- a/views/pages/insertuser.ejs
+++ b/views/pages/insertuser.ejs
@@ -1,21 +1,21 @@
 <% include ../partials/header %>
- <form action="/users/insertuser" method="post">
+ <form action="/users/insert" method="post">
  <div class="form-group">
    <label for="">ID</label>
    <input type="number"
-     class="form-control" value="<%=users.id %>" name="id" id="" aria-describedby="helpId" placeholder=""value="">
+     class="form-control" value="<%= users.id %>" name="id" id="" aria-describedby="helpId" placeholder=""value="">
    <small id="helpId" class="form-text text-muted">user ID</small>
  </div>
 <div class="form-group">
    <label for="">Email</label>
    <input type="text"
-     class="form-control" value="<%=users.email %>" name="title" id="" aria-describedby= "helpId" placeholder=""value="">
+     class="form-control" value="<%= users.email %>" name="title" id="" aria-describedby= "helpId" placeholder=""value="">
    <small id="helpId" class="form-text text-muted">user Email</small>
  </div>
  <div class="form-group">
    <label for="">Password</label>
    <input type="number"
-     class="form-control" value="<%=users.password %>" name="price" id="" aria-describedby="helpId" placeholder=""value="">
+     class="form-control" value="<%= users.password %>" name="price" id="" aria-describedby="helpId" placeholder=""value="">
    <small id="helpId" class="form-text text-muted">user Password</small>
  </div>
 <button type="submit" class="btn btn-primary">Save</button>
