--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -14,7 +14,8 @@
              <td scope="row"><%=user.id %></td>
              <td><%=user.email %></td>
              <td><%=user.password %></td>
-             <td><a name="" id="" class="btn btn-dark" href="/users/<%=user.id %>" role="button">Edit</a></td>
+             <td><a name="" id="" class="btn btn-dark" href="/users/<%=user.id %>" role="button">Edit</a>
+             <a name="" id="" class="btn btn-danger" href="/users/<%=user.id %>" onclick="return confirm('Are you sure you want to delete?')" role="button">Delete</a></td>
          </tr>
          <% }); %>
      </tbody>
