--- a/views/pages/users_edit.ejs
+++ b/views/pages/users_edit.ejs
@@ -1,23 +1,30 @@
 <% include ../partials/header %>
- <form action="/users/update" method="post">
- <div class="form-group">
-   <label for="">ID</label>
-   <input type="number"
-     class="form-control" value="<%=users.id %>" name="id" id="" aria-describedby="helpId" placeholder="">
-   <small id="helpId" class="form-text text-muted">user ID</small>
- </div>
+  
+  <form action ="/users/update" method ="post">
+  <div class="form-group">
+    <label for="">ID</label>
+    <input type="number"
+      class="form-control"value ="<%= users.id %>" name="id" id="" aria-describedby="helpId" placeholder="">
+    <small id="helpId" class="form-text text-muted">User ID</small>
+  </div>
+
 <div class="form-group">
-   <label for="">Email</label>
-   <input type="text"
-     class="form-control" value="<%=users.email %>" name="title" id="" aria-describedby= "helpId" placeholder="">
-   <small id="helpId" class="form-text text-muted">user Email</small>
- </div>
- <div class="form-group">
-   <label for="">Password</label>
-   <input type="number"
-     class="form-control" value="<%=users.password %>" name="price" id="" aria-describedby="helpId" placeholder="">
-   <small id="helpId" class="form-text text-muted">user Password</small>
- </div>
+    <label for="">email</label> 
+    <input type="text"
+      class="form-control" value ="<%= users.email %>"name="email" id="" aria-describedby="helpId" placeholder="">
+    <small id="helpId" class="form-text text-muted">Email</small>
+  </div>
+
+<div class="form-group">
+    <label for="">password</label>
+    <input type="text"
+      class="form-control" value = "<%= users.password %>"name="password" id="" aria-describedby="helpId" placeholder="">
+    <small id="helpId" class="form-text text-muted">Password</small>
+  </div>
+
+<button type="submit" class="btn btn-dark" >Delete</button>
 <button type="submit" class="btn btn-primary">Save</button>
+<button type="submit" class="btn btn-danger" >Delete</button>
 </form>
-<% include ../partials/footer %>
+
+ <% include ../partials/footer %>
