--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,4 +1,6 @@
 <% include ../partials/header %>
+ <input class="form-control" id="myInput" type="text" placeholder="Search..">
+  <br>
  <table class="table">
      <thead>
          <tr>
@@ -8,7 +10,7 @@
             <th><a name="" id="" class="btn btn-success" href="/insertuser" role="button">Add New</a></th>
          </tr>
      </thead>
-     <tbody>
+     <tbody id="myTable">
      <% users.forEach(function(user){ %>
          <tr>
              <td scope="row"><%=user.id %></td>
@@ -20,6 +22,15 @@
          <% }); %>
      </tbody>
  </table>
-
+<script>
+$(document).ready(function(){
+  $("#myInput").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#myTable tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
 
 <% include ../partials/footer %>
