--- a/views/pages/insertuser.ejs
+++ b/views/pages/insertuser.ejs
@@ -4,21 +4,21 @@
   <label for="id">ID</label>
   <input type="number"
     class="form-control" name="id" id="" aria-describedby="helpId" placeholder=""value="">
-  <small id="helpId" class="form-text text-muted"> ID</small>
+  <small id="helpId" class="form-text text-muted">user ID</small>
 </div>
 
   <div class="form-group">
     <label for="email">email</label>
     <input type="text"
       class="form-control" name="email" id="" aria-describedby="helpId" placeholder=""value="">
-    <small id="helpId" class="form-text text-muted">Email</small>
+    <small id="helpId" class="form-text text-muted">user Email</small>
   </div>
 
   <div class="form-group">
     <label for="password">password</label>
     <input type="text"
       class="form-control" name="password" id="" aria-describedby="helpId" placeholder=""value="">
-    <small id="helpId" class="form-text text-muted">Password</small>
+    <small id="helpId" class="form-text text-muted">user Password</small>
     </div>
     
 
