button user&product2

--- a/views/pages/insert.ejs
+++ b/views/pages/insert.ejs
@@ -27,8 +27,9 @@
         <input type="text" class="form-control" value="<%= time %>" name="time" id="" aria-describedby="helpId" placeholder="" >
         <small id="helpId" class="form-text text-muted">Time</small>
       </div>
-      
-  <button type="submit" class="btn btn-secondary">Save</button>
+  <a name="" id="" class="btn btn-secondary" href="/products" role="button">Cancel</a>   
+  <button type="submit" class="btn btn-success">Add New</button>
+
 </div>
    
 </form>
