--- a/views/pages/insertuser.ejs
+++ b/views/pages/insertuser.ejs
@@ -27,7 +27,8 @@
         <input type="text" class="form-control" value="<%= time %>" name="time" id="" aria-describedby="helpId" placeholder="" >
         <small id="helpId" class="form-text text-muted">Time</small>
       </div>
-
-<button type="submit" class="btn btn-primary">Save</button>
+<a name="" id="" class="btn btn-secondary" href="/users" role="button">Cancel</a>
+  
+  <button type="submit" class="btn btn-success">Add New</button>
 </form>
 <% include ../partials/footer %>
