--- a/views/pages/products_edit.ejs
+++ b/views/pages/products_edit.ejs
@@ -18,7 +18,7 @@
      class="form-control" value="<%=products.price %>" name="price" id="" aria-describedby="helpId" placeholder="">
    <small id="helpId" class="form-text text-muted">Product Price</small>
  </div>
- <button type="submit" class="btn btn-dark" >Delete</button>
+ <button type="submit" class="btn btn-dark" >Cancel</button>
 <button type="submit" class="btn btn-primary">Save</button>
 
 </form>
