--- a/views/pages/users_edit.ejs
+++ b/views/pages/users_edit.ejs
@@ -22,7 +22,7 @@
     <small id="helpId" class="form-text text-muted">Password</small>
   </div>
 
-<button type="submit" class="btn btn-dark" >Delete</button>
+<button type="submit" class="btn btn-dark" >Cancel</button>
 <button type="submit" class="btn btn-primary">Save</button>
 
 </form>
