--- a/views/pages/products_edit.ejs
+++ b/views/pages/products_edit.ejs
@@ -18,6 +18,11 @@
      class="form-control" value="<%=products.price %>" name="price" id="" aria-describedby="helpId" placeholder="">
    <small id="helpId" class="form-text text-muted">Product Price</small>
  </div>
+ <div class="form-group">
+        <label for="">Time</label>
+        <input type="text" class="form-control" value="<%= time %>" name="time" id="" aria-describedby="helpId" placeholder="" >
+        <small id="helpId" class="form-text text-muted">Time</small>
+      </div>
  <button type="submit" class="btn btn-dark" >Cancel</button>
 <button type="submit" class="btn btn-primary">Save</button>
 
