--- a/views/pages/users_edit.ejs
+++ b/views/pages/users_edit.ejs
@@ -21,6 +21,11 @@
       class="form-control" value = "<%= users.password %>"name="password" id="" aria-describedby="helpId" placeholder="">
     <small id="helpId" class="form-text text-muted">Password</small>
   </div>
+  <div class="form-group">
+        <label for="">Time</label>
+        <input type="text" class="form-control" value="<%= time %>" name="time" id="" aria-describedby="helpId" placeholder="" >
+        <small id="helpId" class="form-text text-muted">Time</small>
+      </div>
 
 <button type="submit" class="btn btn-dark" >Cancel</button>
 <button type="submit" class="btn btn-primary">Save</button>
