--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,8 +49,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Report</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Action 1</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                        <a class="dropdown-item" href="product_report">product_report</a>
+                        <a class="dropdown-item" href="users_report">users_report</a>
                     </div>
                 </li>
             </ul>
