--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 <div class="jumbotron">
-            <h1 class="display-3">Ejs</h1>
+            <h1 class="display-3">project Ejs</h1>
             <p class="lead">Teerayut Hatsakorn</p>
             <hr class="my-2">
             <p>5930213036</p>
