--- a/views/pages/product_report.ejs
+++ b/views/pages/product_report.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-
+<div class="jumbotron">
  <br>
  <h2>Report Products</h2>
 <table class="table">
@@ -21,9 +21,5 @@
       <% }); %>
     </tbody>
 </table>
-
-
-
-
-
-  <% include ../partials/footer %>
+</div>
+ <% include ../partials/footer %>
