--- a/views/pages/insertuser.ejs
+++ b/views/pages/insertuser.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+<div class="jumbotron">
  <form action="/users/insertuser" method="post">
   <div class="form-group">
   <label for="id">ID</label>
@@ -31,4 +32,5 @@
   
   <button type="submit" class="btn btn-success">Add New</button>
 </form>
+<div>
 <% include ../partials/footer %>
