--- a/views/pages/products_edit.ejs
+++ b/views/pages/products_edit.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+<div class="jumbotron">
  <form action="/products/update" method="post">
  <div class="form-group">
    <label for="">ID</label>
@@ -27,4 +28,5 @@
 <button type="submit" class="btn btn-primary">Save</button>
 
 </form>
+</div>
 <% include ../partials/footer %>
