--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+ <div class="jumbotron">
  <input class="form-control" id="myInput" type="text" placeholder="Search..">
   <br>
  <table class="table">
@@ -32,5 +33,5 @@ $(document).ready(function(){
   });
 });
 </script>
-
+</div>
 <% include ../partials/footer %>
