--- a/views/pages/users_edit.ejs
+++ b/views/pages/users_edit.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-  
+  <div class="jumbotron">
   <form action ="/users/update" method ="post">
   <div class="form-group">
     <label for="">ID</label>
@@ -31,5 +31,5 @@
 <button type="submit" class="btn btn-primary">Save</button>
 
 </form>
-
+</div>
  <% include ../partials/footer %>
