--- a/views/pages/users_report.ejs
+++ b/views/pages/users_report.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-
+<div class="jumbotron">
  <br>
  <h2>Report User</h2>
 <table class="table">
@@ -20,10 +20,5 @@
       <% }); %>
     </tbody>
 </table>
-
-
-
-
-
-
+</div>
   <% include ../partials/footer %>
