--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,16 +37,16 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/products">products</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/users">users</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/about">about</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Report</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/product_report">product_report</a>
@@ -58,3 +58,12 @@
         </div>
     </nav>
     <div class="container">
+    <style>
+            body{
+                
+                    background-color:#778899;
+                    background-repeat:no-repeat;
+                    background-size:cover;
+                
+            }
+        </style>
