--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+ <div class="jumbotron">
  <h1><%= fullname %></h1>
 
     <ul>
@@ -8,5 +9,5 @@
         
     </ul>
  <h1><%= bdate%></h1>
-
+</div>
 <% include ../partials/footer %>
