--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -61,7 +61,7 @@
     <style>
             body{
                 
-                    background-color:#778899;
+                    background-color:#BEBEBE;
                     background-repeat:no-repeat;
                     background-size:cover;
                 
