--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
 </head>
 
 <body>
@@ -64,6 +65,6 @@
                     background-color:#BEBEBE;
                     background-repeat:no-repeat;
                     background-size:cover;
-                
+                font-family: 'Boogaloo', cursive;
             }
         </style>
