--- a/views/pages/insert.ejs
+++ b/views/pages/insert.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-
+<div class="jumbotron">
  <form action="/products/insert" method="post">
 <div class="form-group">
   <label for="id">ID</label>
@@ -31,6 +31,6 @@
   <button type="submit" class="btn btn-success">Add New</button>
 
 </div>
-   
+  </div> 
 </form>
   <% include ../partials/footer %>
