--- a/views/pages/users_report.ejs
+++ b/views/pages/users_report.ejs
@@ -4,20 +4,22 @@
  <h2>Report User</h2>
 <table class="table">
     <thead>
-        <tr>
-            <th>ID</th>
-            <th>E-mail</th>
-            <th>Password</th>
+       <tr  class="bg-secondary">
+            <th>Customers ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Total Sales</th>
         </tr>
     </thead>
-    <tbody id="myTable">
-     <% users.forEach(function(user){ %>
+    <tbody>
+    <% user.forEach(function(user) { %>
         <tr>
-            <td scope="row"><%= user.id %></td>
-            <td><%= user.email %></td>
-            <td><%= user.password %></td>
+            <td scope="row"><font color="blue"><%= user.user_id %></td>
+            <td><font color="blue"><%= user.name %></td>
+            <td><font color="blue"><%= user.email %></td>
+            <td>$<%= user.price %></td>
         </tr>
-      <% }); %>
+        <% }); %>
     </tbody>
 </table>
 </div>
