--- a/views/pages/product_report.ejs
+++ b/views/pages/product_report.ejs
@@ -4,20 +4,27 @@
  <h2>Report Products</h2>
 <table class="table">
     <thead>
-        <tr>
-            <th>ID</th>
-            <th>Tittle</th>
-            <th>Price</th>
+        <tr class="bg-secondary">
+        <th>ITEM NAME</th>
+        <th>QUANTITY PURCHASED</th>
+        <th>AMOUNT</th>
         </tr>
     </thead>
-    <tbody id="myTable">
-     <% products.forEach(function(product){ %>
+    <tbody>
+    <% product.forEach(function(product) { %>
         <tr>
-            <td scope="row"><%= product.id %></td>
-            <td><%= product.title %></td>
-            <td><%= product.price %></td>
-             </tr>
-      <% }); %>
+            <td scope="row"><font color="blue"><%= product.title %></font></td>
+            <td><font color="blue"><%= product.quantity %></font></td>
+            <td><font color="blue">$<%= product.price %></font></td>
+        </tr>
+        <% }); %>
+        <% sum.forEach(function(sum) { %>
+        <tr class="bg-secondary">
+            <td scope="row">Total</td>
+            <td id="quantity"><%= sum.squantity %></td>
+            <td id="price">$<%= sum.sprice %></td>
+        </tr>
+        <% }); %>
     </tbody>
 </table>
 </div>
