--- a/views/pages/products_edit.ejs
+++ b/views/pages/products_edit.ejs
@@ -26,7 +26,31 @@
       </div>
  <button type="submit" class="btn btn-dark" >Cancel</button>
 <button type="submit" class="btn btn-primary">Save</button>
+<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" role="button" >DELETE</button>
 
+</div>
+</form>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel"> Confirm Delete </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body"> Do you want to delete user ? </div>
+        <div class="modal-footer">
+          
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"> CANCLE </button>
+          <a name="" id="" class="btn btn-primary" href="/product_delete/<%= products.id %>" role="button"> DELETE </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    
 </form>
 </div>
 <% include ../partials/footer %>
