--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
  <div class="jumbotron">
- <input class="form-control" id="myInput" type="text" placeholder="Search..">
+ 
   <br>
  <table class="table">
      <thead>
@@ -18,7 +18,7 @@
              <td><%=user.email %></td>
              <td><%=user.password %></td>
              <td><a name="" id="" class="btn btn-dark" href="/users/<%=user.id %>" role="button">Edit</a>
-             <a name="" id="" class="btn btn-danger" href="/user_delete/<%=user.id %>" onclick="return confirm('Are you sure you want to delete?')" role="button">Delete</a></td>
+             </td>
          </tr>
          <% }); %>
      </tbody>
@@ -33,5 +33,17 @@ $(document).ready(function(){
   });
 });
 </script>
+<script>
+        var selectedUser = 0;
+        function deleteUser(id){
+            console.log(id);
+            selectedUser = id;
+            $('#exampleModalCenter').modal('show')
+        }
+        function confirmDelete(){
+            console.log('confirm:'+selectedUser);
+            window.location.href = '/user_delete/'+selectedUser;
+        }        
+    </script>
 </div>
 <% include ../partials/footer %>
