--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -16,7 +16,7 @@
          <tr>
              <td scope="row"><%=product.id %></td>
              <td><%=product.title %></td>
-             <td><%=product.price %></td>
+             <td>$<%=product.price %></td>
              <td><a name="" id="" class="btn btn-dark" href="/products/<%=product.id %>" role="button">Edit</a>
              </td>
             </tr>
