--- a/views/pages/product_report.ejs
+++ b/views/pages/product_report.ejs
@@ -2,6 +2,7 @@
 <div class="jumbotron">
  <br>
  <h2>Report Products</h2>
+ <canvas id="bar-chart" width="800" height="450"></canvas>
 <table class="table">
     <thead>
         <tr class="bg-secondary">
@@ -28,4 +29,49 @@
     </tbody>
 </table>
 </div>
+<script>
+<%
+function getRandomColor() {
+    var letters = '0123456789ABCDEF'.split('');
+    var color = '#';
+    for (var i = 0; i < 6; i++ ) {
+        color += letters[Math.floor(Math.random() * 16)];
+    }
+    return color;
+}
+
+ 
+var labelss=[]
+var data=[]
+var color=[]
+product.forEach(function(product) { 
+    var colors =getRandomColor()
+    labelss.push("'" + product.title + "'");
+    color.push("'" +colors + "'");
+    data.push(product.price);
+}); %>
+
+new Chart(document.getElementById("bar-chart"), {
+    type: 'bar',
+    data: {
+      labels:[<%-labelss%>], 
+      
+      datasets:[{
+          label: "Products",
+                backgroundColor: [<%-color%>],   
+          data:  [<%=data%>]
+        }]
+      
+     
+    },
+    options: {
+      legend: { display: false },
+      title: {
+        display: true,
+        text: 'Predicted world population (millions) in 2050'
+      }
+    }
+});
+</script>
+
  <% include ../partials/footer %>
