--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -4,7 +4,7 @@
   <br>
  <table class="table">
      <thead>
-         <tr>
+         <tr class="bg-secondary">
              <th>ID</th>
              <th>Email</th>
              <th>Password</th>
