--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -4,7 +4,7 @@
   <br>
  <table class="table">
      <thead>
-         <tr>
+         <tr class="bg-secondary">
              <th>ID</th>
              <th>Title</th>
              <th>Price</th>
